# nixos

./: .envrc  .gitignore  .sops.yaml  README.md  deploy.sh  flake.nix  nixpkgs.nix  settings.nix  shell.nix  variables.nix
home-manager/: home.nix  init-extra.zsh  shell.nix  style.nix  walker.nix
lib/: default.nix
nixos/: bootloader.nix  configuration.nix  fingerprint-scanner.nix  firewall.nix  garbage-collection.nix  gnome.nix  hardware-configuration.nix  hyperland.nix  networking.nix  packages.nix  sound.nix  style.nix  users.nix  virtualization.nix
overlays/: default.nix  hyprland-overlay.nix
pkgs/: default.nix  sddm-theme.nix
scripts/: debian.sh  ubuntu.sh
secrets/: secrets.yaml
system/: cachix.nix  hardware-configuration.nix
templates/: README.md  default.nix
templates/python/: README.md  flake.nix  pyproject.toml
templates/python/sample_package/: __init__.py
terraform_nix/: .terraform.lock.hcl
terraform_nix_lxc/: image.tf
themes/: 3024.yaml  README.org  apathy.yaml  apprentice.yaml  ashes.yaml  atelier-cave-light.yaml  atelier-cave.yaml  atelier-dune-light.yaml  atelier-dune.yaml  atelier-estuary-light.yaml  atelier-estuary.yaml  atelier-forest-light.yaml  atelier-forest.yaml  atelier-heath-light.yaml  atelier-heath.yaml  atelier-lakeside-light.yaml  atelier-lakeside.yaml  atelier-plateau-light.yaml  atelier-plateau.yaml  atelier-savanna-light.yaml  atelier-savanna.yaml  atelier-seaside-light.yaml  atelier-seaside.yaml  atelier-sulphurpool-light.yaml  atelier-sulphurpool.yaml  atlas.yaml  ayu-dark.yaml  ayu-light.yaml  ayu-mirage.yaml  (+238 more)
(+415 files in other folders)
