[tool.poetry]
name = "sample_package"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"

packages = [
  { include = "sample_package" }
]

[tool.poetry.scripts]
sample_package = "sample_package:main"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
